--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
- api = new TodoistApi("ec9761859e72ddd389c611948b9e63f46e8f5f61");
+ VITE_TODOIST_API_KEY = new TodoistApi("ec9761859e72ddd389c611948b9e63f46e8f5f61");
+  
