--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@doist/todoist-api-typescript": "^3.0.3",
+    "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.22.7",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
